<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Material.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/profile_background_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/background_image"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg" />

        <ImageView
            android:id="@+id/profile_picture_imageView"
            style="@style/profile_pic_style"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintBottom_toTopOf="@+id/company_quick_info_cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/company_quick_info_cardView"
            app:srcCompat="@drawable/profile_pic" />

        <android.support.v7.widget.CardView
            android:id="@+id/company_quick_info_cardView"
            style="@style/card_style"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/profile_background_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_background_imageView">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/company_logo_imageView"
                    style="@style/company_logo_style"
                    android:contentDescription="@string/company_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/company_logo" />

                <TextView
                    android:id="@+id/company_designation_textView"
                    style="@style/company_quick_info_style"
                    android:text="@string/designation"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_logo_imageView" />

                <TextView
                    android:id="@+id/company_location_textView"
                    style="@style/company_quick_info_style"
                    android:text="@string/location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_designation_textView" />

                <Button
                    android:id="@+id/portfolio_button"
                    style="@style/portfolio_button_style"
                    android:onClick="tapMeForPortfolio"
                    android:theme="@style/PortfolioButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_location_textView" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_style"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_quick_info_cardView">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/company_details_textView"
                    style="@style/value_fields_style"
                    android:layout_marginTop="16dp"
                    android:text="@string/company_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/phone_icon_imageView"
                    style="@style/portfolio_icons_style"
                    android:contentDescription="@string/phone_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_details_textView"
                    app:srcCompat="@drawable/phone_icon" />

                <TextView
                    android:id="@+id/phone_header_textView"
                    style="@style/header_fields_style"
                    android:text="@string/phone_header"
                    app:layout_constraintStart_toEndOf="@+id/phone_icon_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/company_details_textView" />

                <TextView
                    android:id="@+id/phone_value_textView"
                    style="@style/value_fields_style"
                    android:text="@string/phone_value"
                    app:layout_constraintStart_toEndOf="@+id/phone_icon_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/phone_header_textView" />

                <ImageView
                    android:id="@+id/mail_icon_imageView"
                    style="@style/portfolio_icons_style"
                    android:contentDescription="@string/mail_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_value_textView"
                    app:srcCompat="@drawable/mail_icon" />

                <TextView
                    android:id="@+id/mail_header_textView"
                    style="@style/header_fields_style"
                    android:text="@string/mail_header"
                    app:layout_constraintStart_toEndOf="@+id/mail_icon_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/phone_value_textView" />

                <TextView
                    android:id="@+id/mail_value_textView"
                    style="@style/value_fields_style"
                    android:text="@string/mail_value"
                    app:layout_constraintStart_toEndOf="@+id/mail_icon_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/mail_header_textView" />

                <ImageView
                    android:id="@+id/description_icon_imageView"
                    style="@style/portfolio_icons_style"
                    android:contentDescription="@string/description_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mail_value_textView"
                    app:srcCompat="@drawable/description_icon" />

                <TextView
                    android:id="@+id/description_header_textView"
                    style="@style/header_fields_style"
                    android:text="@string/description_header"
                    app:layout_constraintStart_toEndOf="@+id/description_icon_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/mail_value_textView" />

                <TextView
                    android:id="@+id/description_value_textView"
                    style="@style/value_fields_style"
                    android:text="@string/description_value"
                    app:layout_constraintStart_toEndOf="@+id/description_icon_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/description_header_textView" />

                <ImageView
                    android:id="@+id/website_icon_imageView"
                    style="@style/portfolio_icons_style"
                    android:contentDescription="@string/website_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_value_textView"
                    app:srcCompat="@drawable/website_icon" />

                <TextView
                    android:id="@+id/website_header_textView"
                    style="@style/header_fields_style"
                    android:text="@string/website_header"
                    app:layout_constraintStart_toEndOf="@+id/website_icon_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/description_value_textView" />

                <TextView
                    android:id="@+id/website_value_textView"
                    style="@style/value_fields_style"
                    android:layout_marginBottom="16dp"
                    android:text="@string/website_value"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/website_icon_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/website_header_textView" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>